# console-rpg

console-rpg/: README  TODO  battlesystem.cpp  battlesystem.h  creature.h  crpg.cpp  crpg.kdevelop  db.h  definitions.h  enemy.cpp  enemy.h  items.cpp  items.h  makefile  map.cpp  map.h  movement.cpp  movement.h  npc.cpp  npc.h  player.cpp  player.h  playerlist.h  utilities.cpp  utilities.h
crpg/: ConsoleRPG2.kdevelop  Doxyfile  configure  configure.in
crpg-item-maker/: CRPGItemMaker.kdevelop  Makefile.in  configure  configure.in
crpg-item-maker/src/: Makefile.am  Makefile.in  main.cpp  mainwindow.cpp  mainwindow.h  numericentry.h  wizard.cpp  wizard.h
crpg-mapedit/: Makefile  README  crpg-mapedit.pro  crpgmapedit.cpp  dialogs.cpp  dialogs.h  gotodialog.cpp  gotodialog.h  mainwindow.cpp  mainwindow.h  maptable.cpp  maptable.h  newdialog.cpp  newdialog.h  prefdialog.cpp  prefdialog.h  tile.cpp  tile.h  tileindicator.cpp  tileindicator.h  toolbox.cpp  toolbox.h
crpg-mapedit/icons/: filenew.xpm  fileopen.xpm  filesave.xpm  filesaveas.xpm  pen1.xpm  pen2.xpm  pen3.xpm  quit.xpm
crpg-mapedit/icons/.xvpics/: filenew.xpm  fileopen.xpm  filesave.xpm  filesaveas.xpm  quit.xpm
crpg-mapedit/tiles/: grass.xpm  water.xpm
crpg-mapedit/tiles/.xvpics/: grass.xpm  water.xpm
crpg/src/: Makefile.am  Makefile.in  container.cpp  container.h  creature.h  crpg.cfg  crpg.cpp  definitions.h  enemy.cpp  enemy.h  event.h  eventprocessor.cpp  eventprocessor.h  events.cpp  events.h  exception.h  game.cpp  game.h  item.cpp  item.h  itemdb.xml  itemmodel.h  items.db  map.cpp  map.h  object.h  parser.cpp  parser.h  player.cpp  player.h  position.h  threads.cpp  threads.h  timer.cpp  timer.h  utilities.cpp  utilities.h
