bin_PROGRAMS = crpg2

AM_CXXFLAGS = -DDEBUG
crpg2_LDFLAGS =  -lxml2 

crpg2_SOURCES = creature.h \
                crpg.cpp \
		event.h \
		events.cpp events.h \
		exception.h \
		game.cpp game.h \
		item.cpp item.h \
		itemmodel.h \
		map.cpp map.h \
		object.h \
		player.cpp player.h \
		position.h \
		timer.cpp timer.h \
		utilities.cpp utilities.h

CLEANFILES = *~ *.o
